--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.vscode
+
+############################################
+# golang project
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +18,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+
+############################################
+# java project
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+bin
